AC_INIT(src/main.c)
PACKAGE=loqui
MAJOR_VERSION=0
MINOR_VERSION=1
MICRO_VERSION=0
EXTRA_VERSION=
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

GNOME_PLATFORM_GNOME_2(yes)

PKG_CHECK_MODULES(LOQUI, libgnomeui-2.0 >= 2.0.0)
LOQUI_LIBS="${LOQUI_LIBS}"
AC_SUBST(LOQUI_LIBS)
AC_SUBST(LOQUI_CFLAGS)

PKG_CHECK_MODULES(GLIB2, glib-2.0 >= 2.2.0)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC
AC_ARG_PROGRAM

GNOME_COMPILE_WARNINGS

# begin GConf
GCONF_CONFIG_SOURCE=

AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOUR
CE=$enable_gconf_source,)

if test "x$GCONF_CONFIG_SOURCE" = "x"; then
        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
fi

AC_SUBST(GCONF_CONFIG_SOURCE)

AC_MSG_CHECKING("GConf configuration source")
AC_MSG_RESULT(${GCONF_CONFIG_SOURCE})

AC_ARG_ENABLE(install_schemas,
        [  --disable-install-schemas        Disable installation of the gconf schemas])
AM_CONDITIONAL(INSTALL_SCHEMAS, test x$enable_install_schemas != xno)

if test x$enable_install_schemas != xno; then
        AM_GCONF_SOURCE_2
fi
# end GConf

GETTEXT_PACKAGE="$PACKAGE"
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="ja"

AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AC_PROG_INTLTOOL

AM_PATH_GNET(1.1.4,, AC_MSG_ERROR(Test for GNet failed. See the 'INSTALL' for help.))

AC_SUBST(GNET_CFLAGS)
AC_SUBST(GNET_LIBS)

AC_DEFINE_UNQUOTED(G_LOG_DOMAIN, "$PACKAGE")

AC_CHECK_FUNCS(bind_textdomain_codeset)

AC_OUTPUT( po/Makefile.in  m4/Makefile 
Makefile
src/Makefile
)
