AC_INIT(src/main.c)
PACKAGE=loqui
MAJOR_VERSION=0
MINOR_VERSION=1
MICRO_VERSION=0
EXTRA_VERSION=
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AM_PATH_GTK_2_0(2.2.0,, AC_MSG_ERROR(Test for Gtk failed. See the 'INSTALL' for help.), gthread)

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AC_HEADER_STDC
AC_ARG_PROGRAM
AC_PROG_LIBTOOL

GETTEXT_PACKAGE="$PACKAGE"
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="ja"

AM_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AC_PROG_INTLTOOL

AM_PATH_GNET(1.1.4,, AC_MSG_ERROR(Test for GNet failed. See the 'INSTALL' for help.))

AC_SUBST(GNET_CFLAGS)
AC_SUBST(GNET_LIBS)

AC_DEFINE_UNQUOTED(G_LOG_DOMAIN, "$PACKAGE")

AC_CHECK_FUNCS(bind_textdomain_codeset)

AC_OUTPUT(
Makefile
src/Makefile
po/Makefile.in
intl/Makefile
m4/Makefile
)
